[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Door1withAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/FloorPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/DoorControl.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Door1" type="Spatial"]
script = ExtResource( 3 )

[node name="Door1withAnimation" parent="." instance=ExtResource( 1 )]

[node name="FloorPanel" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="FloorPanel2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="DoorBlocker" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DoorBlocker"]
transform = Transform( 0.2, 0, 0, 0, 5, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
